[package]
name = "houls"
version = "0.1.0"
edition = "2021"

[lib]
name = "tree_sitter_houlang"
path = "tree-sitter-houlang/bindings/rust/lib.rs"

[[bin]]
name = "houls"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", features = ["derive", "serde_derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["io-std", "tokio-macros", "macros", "rt-multi-thread"] }
# tower-lsp = "0.19.0"
tower-lsp = { path = "/home/rmstorm/Documents/rust/tower-lsp" }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"

[build-dependencies]
cc="*"
